--- a/HealingArts/ArtistDetails.storyboard
+++ b/HealingArts/ArtistDetails.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3kI-LG-lBG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Oxq-Tu-lSA">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,52 +10,52 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Artist Detail View Controller-->
+        <!--View Controller-->
         <scene sceneID="qqM-ie-RAg">
             <objects>
-                <viewController id="3kI-LG-lBG" customClass="ArtistDetailViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="3kI-LG-lBG" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="a5f-LO-R5S">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="chihulypic" translatesAutoresizingMaskIntoConstraints="NO" id="Zo3-qZ-C2L">
-                                <rect key="frame" x="97" y="80" width="220" height="164"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="220"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mfY-7G-wis">
-                                <rect key="frame" x="141" y="332" width="106" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="View Collection"/>
-                                <connections>
-                                    <segue destination="zgh-ND-ma8" kind="show" id="Ytz-Le-67J"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Dale Chihuly" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nby-af-T5y">
-                                <rect key="frame" x="133" y="303" width="122" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Dale Chihuly:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nby-af-T5y">
+                                <rect key="frame" x="84" y="298" width="122" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XDG-br-t39">
-                                <rect key="frame" x="-7" y="417" width="429" height="402"/>
+                                <rect key="frame" x="0.0" y="386" width="414" height="429"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <mutableString key="text">Dale Chihly is known for revolutionizing the studio glass movement and elevating perceptions of the glass medium. He employs a diverse array of materials to realize his creative vision through drawing, painting, and sculpture. Chihuly is renowned for his iconic glass sculptures, ambititious site-specific public installations, and exhibitions in historic cities, museums, and gardens around the world. Born in 1941 in Tacoma, Washington, Chihuly draws inspiration form the Pacific Northwest region. A leader of the studio art movement, Chihuly established the glass program at the Rhode Island School of Design and cofounded the Pilchuck Glass School in Stanwood, Washington. Chihuly, who continues to create art at his studio in Seattle, has received numerous awards and honorary degrees, and his work is included in more than 200 museums collections worldwide, including the Metropolitan Museum of Art, the Smithsonian American Art Museum, and the Corning Museum of Glass</mutableString>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Biography:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4q3-DQ-olK">
+                                <rect key="frame" x="0.0" y="357" width="90" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mfY-7G-wis">
+                                <rect key="frame" x="214" y="293" width="106" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="View Collection"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="dMc-Wh-1fj"/>
                     </view>
-                    <connections>
-                        <outlet property="artistLabel" destination="nby-af-T5y" id="dfy-2k-tu8"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pg4-ce-fCL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3785.507246376812" y="20.758928571428569"/>
+            <point key="canvasLocation" x="3936" y="880"/>
         </scene>
         <!--Collection-->
         <scene sceneID="Z53-CT-9TG">
@@ -65,8 +65,102 @@
             </objects>
             <point key="canvasLocation" x="4445" y="-37"/>
         </scene>
+        <!--Artist Detail View Controller-->
+        <scene sceneID="4QO-eO-2ow">
+            <objects>
+                <viewController id="Oxq-Tu-lSA" customClass="ArtistDetailViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3z7-al-FdT">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HrH-hR-DMC">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x8O-Pq-f0v">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Dale Chihuly" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whQ-3L-6bz">
+                                                <rect key="frame" x="80" y="325" width="117" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Biography:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bm4-il-7eH">
+                                                <rect key="frame" x="8" y="369" width="90" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OOV-vI-HQL">
+                                                <rect key="frame" x="0.0" y="398" width="414" height="447"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="backgroundColor" red="0.96703153848648071" green="0.95623332262039185" blue="0.93819808959960938" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d5B-DL-cNU">
+                                                <rect key="frame" x="109" y="870" width="197" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Check out their website"/>
+                                            </button>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="chihulypic" translatesAutoresizingMaskIntoConstraints="NO" id="QA5-ov-1Uz">
+                                                <rect key="frame" x="0.0" y="34" width="414" height="262"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text=":" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tJs-54-KPY">
+                                                <rect key="frame" x="188" y="325" width="5" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FuP-7w-vv0">
+                                                <rect key="frame" x="210" y="320" width="106" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="View Collection"/>
+                                                <connections>
+                                                    <segue destination="zgh-ND-ma8" kind="show" id="cCn-7b-wTT"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.96703153848648071" green="0.95623332262039185" blue="0.93819808959960938" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1000" id="Fqq-2u-yrz"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="x8O-Pq-f0v" firstAttribute="leading" secondItem="HrH-hR-DMC" secondAttribute="leading" id="4Vw-48-ebz"/>
+                                    <constraint firstAttribute="bottom" secondItem="x8O-Pq-f0v" secondAttribute="bottom" id="XGU-4o-kpq"/>
+                                    <constraint firstItem="x8O-Pq-f0v" firstAttribute="top" secondItem="HrH-hR-DMC" secondAttribute="top" id="Yyd-1F-MRE"/>
+                                    <constraint firstAttribute="trailing" secondItem="x8O-Pq-f0v" secondAttribute="trailing" id="hFz-ab-YKe"/>
+                                    <constraint firstItem="x8O-Pq-f0v" firstAttribute="centerX" secondItem="HrH-hR-DMC" secondAttribute="centerX" id="o6Q-Bk-Xkh"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.96703153848648071" green="0.95623332262039185" blue="0.93819808959960938" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="HrH-hR-DMC" firstAttribute="top" secondItem="PRG-d2-Cxq" secondAttribute="top" constant="-44" id="AAc-Kz-jds"/>
+                            <constraint firstItem="HrH-hR-DMC" firstAttribute="leading" secondItem="PRG-d2-Cxq" secondAttribute="leading" id="foh-p9-616"/>
+                            <constraint firstItem="HrH-hR-DMC" firstAttribute="trailing" secondItem="PRG-d2-Cxq" secondAttribute="trailing" id="qRf-MR-9PR"/>
+                            <constraint firstAttribute="bottom" secondItem="HrH-hR-DMC" secondAttribute="bottom" id="zj7-iJ-XQ0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="PRG-d2-Cxq"/>
+                    </view>
+                    <size key="freeformSize" width="414" height="1000"/>
+                    <connections>
+                        <outlet property="artistLabel" destination="whQ-3L-6bz" id="aEv-sM-mis"/>
+                        <outlet property="textView" destination="OOV-vI-HQL" id="NWc-pi-Fwv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nUd-lU-nym" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3776.811594202899" y="-3.3482142857142856"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="chihulypic" width="135" height="90"/>
+        <image name="chihulypic" width="183" height="275"/>
     </resources>
 </document>
