--- a/HealingArts/ArtworkDetails.storyboard
+++ b/HealingArts/ArtworkDetails.storyboard
@@ -184,13 +184,13 @@
         <!--Card Art Details View Controller-->
         <scene sceneID="R8u-s5-eSZ">
             <objects>
-                <viewController hidesBottomBarWhenPushed="YES" id="S4a-NC-Q21" customClass="CardArtDetailsViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="S4a-NC-Q21" customClass="CardArtDetailsViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fSM-5K-MWa">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="o0e-BZ-vM2">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o0e-BZ-vM2">
+                                <rect key="frame" x="0.0" y="44" width="414" height="717"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -208,7 +208,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bIc-ip-tys" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4371" y="778"/>
+            <point key="canvasLocation" x="4369.5652173913049" y="777.45535714285711"/>
         </scene>
         <!--ArtistDetails-->
         <scene sceneID="HS7-Zc-ynL">
